--- a/client/src/Components/Widgets/CalendarWidget/CalendarWidget.css
+++ b/client/src/Components/Widgets/CalendarWidget/CalendarWidget.css
@@ -4,33 +4,80 @@
   margin-top: 8em;
 }
 .calendar-container {
-  display: flex;
-  flex-direction: row;
-  width: 60%;
-  background-color: rgb(42, 42, 42);
+  width: 90%;
+  background-color: rgb(54, 54, 54);
   color: white;
-  padding: 1em;
-  border-radius: 1em;
+  border-radius: 1.2em;
 }
 .calendar-header {
-  font-size: 1.3rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  color: white;
+  font-size: 1.2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 1em 0 0 1.15em;
 }
-.calendar-columns {
+.flex-container {
   display: flex;
-  flex-direction: column;
-  margin-top: 1.4em;
-  gap: 1.2em;
+  gap: 1em;
+  align-items: center;
+}
+.grid-container {
+  width: 50%;
+  display: grid;
+  margin: 1.3em 0 1em 1.2em;
+  grid-template-columns: repeat(7, 0.5em [row-start]);
+  column-gap: 1.4em;
+  row-gap: 0.3em;
+  font-size: 0.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  text-align: center;
+}
+.calendar-weekdays {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.7em;
+  height: 1.7em;
   font-size: 0.7rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .calendar-weekdays:nth-child(7n) {
-  color: rgb(190, 57, 57);
+  color: rgb(255, 0, 0);
+}
+.calendar-cells {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.7rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  width: 1.7em;
+  height: 1.7em;
 }
 .calendar-cells:nth-child(7n) {
-  color: rgb(190, 57, 57);
+  color: rgb(255, 0, 0);
+}
+.current-date {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: black;
+  background-color:  red;
+  border-radius: 0.3em;
+  width: 1.7em;
+  height: 1.7em;
 }
 .scheduled-events-container {
-  width: 5em;
+  width: 100%;
+  height: 10em;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+}
+.events-para-two {
+  font-size: 0.7rem;
 }
