--- a/client/src/Components/Widgets/CalendarWidget/CalendarWidget.css
+++ b/client/src/Components/Widgets/CalendarWidget/CalendarWidget.css
@@ -37,7 +37,6 @@
   justify-content: center;
   width: 1.7em;
   height: 1.7em;
-  font-size: 0.7rem;
 }
 .calendar-weekdays:nth-child(7n) {
   color: rgb(255, 0, 0);
@@ -46,7 +45,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.7rem;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   width: 1.7em;
@@ -59,7 +57,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: black;
+  background-color:  white;
+  border-radius: 0.3em;
+  width: 1.7em;
+  height: 1.7em;
+}
+.current-date:nth-child(7n) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   color: black;
@@ -76,8 +85,10 @@
   text-align: center;
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
+  color: rgb(165, 165, 165);
 }
 .events-para-two {
+  margin-top: 0.3em;
   font-size: 0.7rem;
 }
