--- a/client/src/Components/Widgets/WeatherWidget/WeatherWidget.css
+++ b/client/src/Components/Widgets/WeatherWidget/WeatherWidget.css
@@ -3,32 +3,43 @@
   justify-content: center;
 }
 .weather-widget {
+  width: 70%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin-top: 8em;
-  flex-wrap: wrap;
 }
-.weather-widget > * {
-  flex: 1 1 2em;
+.icon-temp-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 7em;
 }
 .para-container {
-  display: grid;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.3em;
+}
+.location-arrow-container {
+  display: flex;
   justify-content: center;
   align-items: center;
+  gap: 0.3em;
 }
 .weather-icon {
-  width: 50px;
-  margin-left: 2.2em;
+  width: 3.1em;
 }
 .weather-temp,
 .weather-location,
 .locale-time {
   color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 2.6rem;
+  font-size: 2rem;
 }
 .weather-location {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 600;
   text-align: center;
 }
@@ -39,14 +50,10 @@
   text-align: center;
 }
 .refresh-arrow {
-  width: 11px;
-  margin-left: 4em;
-  margin-top: -0.8em;
+  width: 0.7em;
 }
 .refresh-arrow-active {
-  width: 11px;
-  margin-left: 4em;
-  margin-top: -0.8em;
+  width: 0.7em;
   animation: rotate 2s ease-in infinite;
 }
 @keyframes rotate {
