--- a/client/src/Components/Widgets/WeatherWidget/WeatherWidget.css
+++ b/client/src/Components/Widgets/WeatherWidget/WeatherWidget.css
@@ -33,7 +33,7 @@
 }
 .weather-temp,
 .weather-location,
-.locale-time {
+.weather-type {
   color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 2rem;
@@ -43,7 +43,7 @@
   font-weight: 600;
   text-align: center;
 }
-.locale-time {
+.weather-type {
   margin-top: 0.3em;
   font-size: 1rem;
   font-weight: 600;
